# vinaymadanambeti-ldp

JiraAgent/: main.py  mcp_clients.py  pyproject.toml  streamlit_app.py  test_mcp_jira.py
JiraAgent/agents/: data_jsonformat_agent.py  data_retrieval_agent.py  query_interpretation_agent.py  summary_agent.py
Problem Statement for MAS/: main.py  pyproject.toml  requirements.txt  ui_app.py
Problem Statement for MAS/agents/: data_ingestion_agent.py  formulaic_calc_agent.py  report_generation_agent.py  risk_assessment_agent.py
Problem Statement for MAS/data/: market_closes_B.json  market_closes_C.json  portfolio_dump_B.json  portfolio_dump_C.json  risk_config.json
Problem Statement for MAS/server/: riskcalc_mcp_server.py
